Correct spacing, shadows, and background color

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,14 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color:rgb(195, 172, 142);
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
+li {
+    padding: 8px;
+}
+
 #sketchPad{
     display: flex;
     flex-direction: column;
@@ -17,8 +24,8 @@ body {
     margin-top: 1em;
     width: min-content;
     border-radius: 10%;
-    border: 5px solid black;
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2), 0 8px 23px 0 rgba(0, 0, 0, 0.19);
+    border: 1px solid rgba(0, 0, 0, 0.327);
+    box-shadow: 0 5px 10px 0 rgb(194, 25, 25), 0 8px 23px 0 rgba(0, 0, 0, 1);
 }
 
 #container {
@@ -36,21 +43,20 @@ body {
     border: 0px solid black;
     border-radius: 3px;
     background-color: rgb(230, 230, 230);
-    min-width: 6.6666%;
-    min-height: auto;
     aspect-ratio: 1/1;
 }
-
 
 button {
     color: rgb(217, 187, 112);
     background-color: rgb(221, 4, 4);
     border-radius: 8px;
     padding: 5px;
-    margin-top: 10px;
+    margin-top: 1.1em;
+    margin-bottom: -10px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: large;
 }
+
 input {
     height: 1.5em;
     width: 4.5em;
@@ -59,4 +65,15 @@ input {
 a {
     text-decoration: none;
     color: inherit;
+}
+.footer {
+    background-color: rgb(138, 138, 138);
+    width: 100%;
+    height: 100%;
+    margin-top: 2em;
+    margin: 3.5em -10em -1em -10em;
+    text-align: center;
+    padding: 10px;
+    font-size: 15px;
+    color: white;
 }
